Fixed spacing for the main and adjusted button

--- a/index.css
+++ b/index.css
@@ -24,8 +24,8 @@ body {
 .root {
     text-align: center;
     width: 40vw;
-    margin: auto;
-    margin-top: 15%;
+    height: 75rem;
+    margin: 2% auto;
     padding-bottom: 2rem;
     background: #1F2937;
 }
@@ -70,7 +70,7 @@ input::-webkit-inner-spin-button {
 
 button {
     width: 12rem;
-    height: 4rem;
+    height: 4.5rem;
     border-radius: .5rem;
     border: none;
     background: #FFF;
@@ -79,9 +79,13 @@ button {
 
 section {
     background: #273549;
-    height: 8rem;
+    height: 12rem;
     width: 35vw;
-    margin: auto;
+    margin: 3rem auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 h2 {
@@ -89,6 +93,8 @@ h2 {
     padding-top: 1.5rem;
     font-weight: 600;
     font-size: 2rem;
+    margin: 0;
+    padding: 0;
 }
 
 .convert-result {
